--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Anjo A Tadena",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   }
